--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "deploy": "ng deploy --base-href=/KiraaYogaa/"
+    "deploy": "ng deploy --cname=kiraayogaa.com"
   },
   "private": true,
   "dependencies": {
